update products guide breadcrump

--- a/view/content/moonfest.html
+++ b/view/content/moonfest.html
@@ -1,9 +1,13 @@
 		<main>
 			<div class="main-wrap products-wrap">
 				<div id="category-guide">
-					<a class="guide-anchor" href="index.php?route=soap">單品</a>
-					<a class="guide-anchor" href="index.php?route=soapstring"> / 皂絲</a>
-					<a class="guide-anchor" href="index.php?route=gift_box"> / 禮盒</a>
+					<a class="guide-link" href="index.php?route=products">商品一覽</a>
+					<span>/</span>
+					<a class="guide-link" href="index.php?route=soap">單品</a>
+					<span>/</span>
+					<a class="guide-link" href="index.php?route=soapstring">皂絲</a>
+					<span>/</span>
+					<a class="guide-link" href="index.php?route=gift_box">禮盒</a>
 				</div>
 				<p class="slogan">
 					想在中秋送份有意義又體面的禮盒，<br>
