--- a/view/content/soapstring.html
+++ b/view/content/soapstring.html
@@ -1,9 +1,13 @@
 		<main>
 			<div class="main-wrap products-wrap">
 				<div id="category-guide">
-					<a class="guide-anchor" href="index.php?route=soap">單品</a>
-					<a class="guide-anchor" href="index.php?route=soapstring"> / 皂絲</a>
-					<a class="guide-anchor" href="index.php?route=gift_box"> / 禮盒</a>
+					<a class="guide-link" href="index.php?route=products">商品一覽</a>
+					<span>/</span>
+					<a class="guide-link" href="index.php?route=soap">單品</a>
+					<span>/</span>
+					<a class="guide-link" href="index.php?route=soapstring">皂絲</a>
+					<span>/</span>
+					<a class="guide-link" href="index.php?route=gift_box">禮盒</a>
 				</div>
 				<p class="slogan">
 					溫和而舒適的手作皂，綿密如雪絲，故名皂絲。<br>
