fix out-dated footer links

--- a/view/footer.html
+++ b/view/footer.html
@@ -6,9 +6,6 @@
 				<a class="footer-main-link" href="index.php?route=about">
 					三三團隊
 				</a>
-				<a class="footer-main-link" href="index.php?route=product_intro">
-					三三堅持
-				</a>
 				<a class="footer-main-link" href="index.php?route=partner">
 					合作夥伴
 				</a>
@@ -34,7 +31,7 @@
 				<p class="footer-title">
 					三三產品
 				</p>
-				<a class="footer-main-link" href="index.php?route=product">
+				<a class="footer-main-link" href="index.php?route=soap">
 					單品
 				</a>
 				<a class="footer-main-link" href="index.php?route=soapstring">
