--- a/view/nav.html
+++ b/view/nav.html
@@ -72,7 +72,7 @@
 						<ul class="nav-dropdown-menu">
 							<li class="nav-dropdown-item">
 								<a class="nav-main-link" href="index.php?route=products">
-									產品一覽
+									商品一覽
 								</a>
 							</li>
 							<li class="nav-dropdown-item">
