fix content: (15 -> 6) craft workshops, (200 -> 100) learners

--- a/view/component/landing_page/landing_page_sp.html
+++ b/view/component/landing_page/landing_page_sp.html
@@ -72,7 +72,7 @@
 					相對於使用大型機器大量生產降低成本，<br>
 					三三選擇將花費數個月的心力研發出的特色單品皂，<br>
 					將技術完整轉移交給身障學員生產，<br>
-					目前合作的日間照顧作業設施(小作所)已多達15間，<br>
+					目前合作的日間照顧作業設施（小作所）已多達6間，<br>
 					所合作涵蓋在內更多達100位身障學員。<br>
 					從認識彼此到培訓、帶活動實作上課程，<br>
 					每一個皂一點一滴的累計秤量攪皂入模晾皂，<br>
