fix needed info in CTA (email -> address)

--- a/view/content/wedding.html
+++ b/view/content/wedding.html
@@ -444,8 +444,8 @@
 						<input id="wd-cta-phone" class="wd-cta-input" type="phone">
 					</div>
 					<div class="wd-cta-form-content">
-						<label for="wd-cta-email">email</label>
-						<input id="wd-cta-email" class="wd-cta-input" type="email">
+						<label for="wd-cta-addr">地址</label>
+						<input id="wd-cta-addr" class="wd-cta-input" type="text">
 					</div>
 					<div id="wd-cta-offer-wrap" class="wd-cta-form-content">
 						<span>
