hide greeting dialog of messenger chat plugin

--- a/view/head_finish.html
+++ b/view/head_finish.html
@@ -7,5 +7,6 @@
 			attribution=setup_tool
 			page_id="832939166804521"
 			logged_in_greeting="歡迎您使用三三吾鄉的服務，您可以在這裡申請免費試用品以及詢問客服問題。"
-			logged_out_greeting="歡迎您使用三三吾鄉的服務，您可以在這裡申請免費試用品以及詢問客服問題。">
+			logged_out_greeting="歡迎您使用三三吾鄉的服務，您可以在這裡申請免費試用品以及詢問客服問題。"
+			greeting_dialog_display="hide">
 		</div>
