update wedding info and index jumbotron img

--- a/view/content/wedding.html
+++ b/view/content/wedding.html
@@ -317,9 +317,6 @@
 								起
 							</span>
 						</p>
-						<p class="wd-text">
-							(原價 $7,000)
-						</p>
 					</div>
 					<div class="wd-offer-intro">
 						<p class="wd-text">
@@ -354,9 +351,6 @@
 								起
 							</span>
 						</p>
-						<p class="wd-text">
-							(原價 $18,500)
-						</p>
 					</div>
 					<div class="wd-offer-intro">
 						<p class="wd-text">
@@ -384,34 +378,37 @@
 				<div class="wd-offer">
 					<div class="wd-offer-name">
 						<p class="wd-title">
-							豪華五禮 C 方案
+							無贈品 75 折方案
 						</p>
 						<p class="wd-text">
-							- 提供憨兒 20 天以上的工作量 -
+							- 無贈品直接折現回饋 -
 						</p>
 					</div>
 					<div class="wd-offer-price">
-						<p class="wd-title">
-							洽詢獲得專屬優惠報價
+						<p class="wd-super-title">
+							每份 $30
 						</p>
 					</div>
 					<div class="wd-offer-intro">
 						<p class="wd-text">
-							250 組以上皂絲包 (25 桌以上)
+							份數客製化
 						</p>
 						<p class="wd-text">
-							客製化貼紙與吊牌
+							可依照新人需求份數調整
 						</p>
 						<p class="wd-text">
-							*內容價格數量皆可客製化
+							*婚期兩週前可臨時追加不怕爆桌
 						</p>
 					</div>
 					<div class="wd-offer-bonus">
 						<p class="wd-text">
-							探房禮 / 伴郎伴娘禮 /
+							貼紙吊牌二選一
 						</p>
 						<p class="wd-text">
-							迎賓禮 / 二進禮 / 送客禮
+							最低起訂量 100 份
+						</p>
+						<p class="wd-text">
+							如需低於 100 份訂購另詢額外報價
 						</p>
 					</div>
 				</div>
