remove faq and redirect to index.php

--- a/view/footer.html
+++ b/view/footer.html
@@ -17,9 +17,9 @@
 				<p class="footer-title">
 					客戶服務
 				</p>
-				<a class="footer-main-link" href="index.php?route=faq">
+				<!-- <a class="footer-main-link" href="index.php?route=faq">
 					顧客問答
-				</a>
+				</a> -->
 				<a class="footer-main-link" href="index.php?route=contact">
 					聯絡我們
 				</a>
