hide wedding form

--- a/view/content/wedding.html
+++ b/view/content/wedding.html
@@ -416,23 +416,24 @@
 			<div id="wd-cta">
 				<div class="wd-intro-content">
 					<p class="wd-title">
-						填表就送皂絲包！
+						加入Line@申請就送皂絲包！
 					</p>
 					<p class="wd-text">
-						即日起，只要填寫諮詢表<br>
+						即日起，只要加入Line@<br>
 						就可免費獲得兩組婚禮皂絲包！<br>
 						數量有限，送完為止！
 					</p>
-					<p class="wd-title">
+					<!-- <p class="wd-title">
 						再送驚喜贈禮及現金折扣！
 					</p>
 					<p class="wd-text">
 						預約參加皂絲 DIY 行程，與憨兒一起製作你的婚禮小物，會有讓你想不到的驚喜贈禮與現金折扣！<br>
 						（填寫諮詢表後將有專人與你解說）
-					</p>
+					</p> -->
 				</div>
 				<div id="wd-cta-form" class="wd-text">
-					<div class="wd-cta-form-content">
+					<img class="full-width-img" src="resource/img/wedding/line-qrcode.png" alt="掃描LINE@QRcode獲得免費婚禮小物試用體驗組+獲得免費專屬樣式打樣唷">
+					<!-- <div class="wd-cta-form-content">
 						<label for="wd-cta-name">姓名</label>
 						<input id="wd-cta-name" class="wd-cta-input" type="text">
 					</div>
@@ -493,7 +494,7 @@
 							</label>
 						</div>
 						<a class="wd-submit-btn" href="javascript:void(0)" onclick="wedding()">立即諮詢</a>
-					</div>
+					</div> -->
 				</div>
 			</div>
 		</main>
