--- a/view/nav.html
+++ b/view/nav.html
@@ -29,11 +29,11 @@
 									三三團隊
 								</a>
 							</li>
-							<li class="nav-dropdown-item">
+							<!-- <li class="nav-dropdown-item">
 								<a class="nav-main-link" href="index.php?route=faq">
 									顧客問答
 								</a>
-							</li>
+							</li> -->
 							<li class="nav-dropdown-item">
 								<a class="nav-main-link" href="index.php?route=shopping_guide">
 									購物須知
