update footer info

--- a/view/footer.html
+++ b/view/footer.html
@@ -48,8 +48,11 @@
 				<p>
 					<span class="icon-phone"></span>
 					<span class="visuallyhidden">Phone</span>
-					<a class="footer-main-link" href="tel:{company_phone}">
+					<!-- <a class="footer-main-link" href="tel:{company_phone}">
 						{company_phone}
+					</a> -->
+					<a class="footer-main-link" href="tel:0965445755">
+						0965445755
 					</a>
 				</p>
 				<p>
@@ -62,7 +65,8 @@
 				<p>
 					<span class="icon-map-marker"></span>
 					<span class="visuallyhidden">Address</span>
-					{company_address}
+					<!-- {company_address} -->
+					台東市豐谷里32鄰梧州街120巷3號3樓
 				</p>
 			</div>
 			<div id="community">
