--- a/view/content/contact.html
+++ b/view/content/contact.html
@@ -8,7 +8,7 @@
 				</p>
 			</div>
 			<div id="contact">
-				<div id="contact-map"></div>
+				<!-- <div id="contact-map"></div> -->
 				<div id="contact-form">
 					<input type="text" id="contact-form-name" class="form-field" placeholder="您的姓名" required>
 					<input type="email" id="contact-form-email" class="form-field" placeholder="信箱" required>
@@ -23,7 +23,8 @@
 						<p>
 							<span class="icon-phone"></span>
 							<span class="visuallyhidden">Phone</span>
-							{company_phone}
+							<!-- {company_phone} -->
+							0965445755
 						</p>
 						<p>
 							<span class="icon-envelope"></span>
@@ -33,7 +34,8 @@
 						<p>
 							<span class="icon-map-marker"></span>
 							<span class="visuallyhidden">Address</span>
-							{company_address}
+							<!-- {company_address} -->
+							台東市豐谷里32鄰梧州街120巷3號3樓
 						</p>
 					</div>
 				</div>
