update wedding page copywriting

--- a/view/content/wedding.html
+++ b/view/content/wedding.html
@@ -17,7 +17,7 @@
 				<div class="wd-intro-content">
 					<p class="wd-subtitle">
 						三三吾鄉婚禮小物<br>
-						諮詢免費送 3 包天然皂絲包！
+						諮詢免費獲得試用包體驗組乙份！
 					</p>
 					<a href="#wd-cta" class="wd-text-btn">
 						立即諮詢
@@ -58,7 +58,7 @@
 				</div>
 				<div class="wd-text-cover">
 					<p class="wd-title">
-						簡單三步驟，婚禮贈品輕鬆搞定
+						簡單三步驟，婚禮小物輕鬆搞定
 					</p>
 					<ol class="wd-tc-ol">
 						<li>
@@ -68,13 +68,13 @@
 						</li>
 						<li>
 							<p class="wd-text">
-								討論貼紙與吊牌設計<br>
+								討論貼紙<br>
 								並提供免費打樣以確認成品
 							</p>
 						</li>
 						<li>
 							<p class="wd-text">
-								製作完成後幫你貨運到府
+								製作完成後於指定日期寄送到府
 							</p>
 						</li>
 					</ol>
@@ -420,7 +420,7 @@
 					</p>
 					<p class="wd-text">
 						即日起，只要加入Line@<br>
-						就可免費獲得兩組婚禮皂絲包！<br>
+						就可免費獲得婚禮小物試用體驗組！<br>
 						數量有限，送完為止！
 					</p>
 					<!-- <p class="wd-title">
