hide other member in about page

--- a/view/content/about.html
+++ b/view/content/about.html
@@ -56,7 +56,7 @@
 					</p>
 				</div>
 			</div>
-			<div class="lp-section lp-plain-text" id="about-other-members">
+			<!--div class="lp-section lp-plain-text" id="about-other-members">
 				<div class="about-member">
 					<picture>
 						<source srcset="resource/img/about/dodo.webp" type="image/webp">
@@ -99,5 +99,5 @@
 						</p>
 					</div>
 				</div>
-			</div>
+			</div-->
 		</main>
