update founder photo

--- a/view/content/about.html
+++ b/view/content/about.html
@@ -42,8 +42,8 @@
 			<div class="lp-section lp-plain-text" id="about-member-master">
 				<div class="about-member-img-wrap">
 					<picture>
-						<source srcset="resource/img/about/pusher.webp" type="image/webp">
-						<img class="about-member-img" src="resource/img/about/pusher.jpg" alt="三三吾鄉創辦人 尹又令">
+						<source srcset="resource/img/about/pusher2.webp" type="image/webp">
+						<img class="about-member-img" src="resource/img/about/pusher2.png" alt="三三吾鄉創辦人 尹又令">
 					</picture>
 				</div>
 				<div class="about-member-intro">
