update customize page

--- a/resource/css/trisoap.scss
+++ b/resource/css/trisoap.scss
@@ -1497,7 +1497,7 @@ label[for="purchase-amount"] {
 	margin-top: $main-nav-height;	// this page has no header
 }
 
-#customize-content-img {
+.customize-content-img {
 	display: block;
 	@extend .full-width-img;
 }
