--- a/view/content/customize.html
+++ b/view/content/customize.html
@@ -1,8 +1,36 @@
 		<main>
 			<div id="customize-wrap">
 				<picture>
-					<source srcset="resource/img/customize/customize_content.webp" type="image/webp">
-					<img id="customize-content-img" src="resource/img/customize/customize_content.jpg" alt="客製化方案與流程介紹">
+					<source srcset="resource/img/customize/customize_content_1.webp" type="image/webp">
+					<img class="customize-content-img" src="resource/img/customize/customize_content_1.png" alt="客製導覽">
+				</picture>
+				<picture>
+					<source srcset="resource/img/customize/customize_content_2.webp" type="image/webp">
+					<img class="customize-content-img" src="resource/img/customize/customize_content_2.png" alt="首先感謝您選擇三三吾鄉社會企業">
+				</picture>
+				<picture>
+					<source srcset="resource/img/customize/customize_content_3.webp" type="image/webp">
+					<img class="customize-content-img" src="resource/img/customize/customize_content_3.png" alt="首先決定規格">
+				</picture>
+				<picture>
+					<source srcset="resource/img/customize/customize_content_4.webp" type="image/webp">
+					<img class="customize-content-img" src="resource/img/customize/customize_content_4.png" alt="再來決定配方吧">
+				</picture>
+				<picture>
+					<source srcset="resource/img/customize/customize_content_5.webp" type="image/webp">
+					<img class="customize-content-img" src="resource/img/customize/customize_content_5.png" alt="第三步決定添加物">
+				</picture>
+				<picture>
+					<source srcset="resource/img/customize/customize_content_6.webp" type="image/webp">
+					<img class="customize-content-img" src="resource/img/customize/customize_content_6.png" alt="再來決定技法與樣式">
+				</picture>
+				<picture>
+					<source srcset="resource/img/customize/customize_content_7.webp" type="image/webp">
+					<img class="customize-content-img" src="resource/img/customize/customize_content_7.png" alt="最後確認有沒有特殊需求">
+				</picture>
+				<picture>
+					<source srcset="resource/img/customize/customize_content_8.webp" type="image/webp">
+					<img class="customize-content-img" src="resource/img/customize/customize_content_8.png" alt="注意事項">
 				</picture>
 			</div>
 		</main>
