--- a/view/content/customize.html
+++ b/view/content/customize.html
@@ -4,10 +4,14 @@
 					<source srcset="resource/img/customize/customize_content_1.webp" type="image/webp">
 					<img class="customize-content-img" src="resource/img/customize/customize_content_1.png" alt="客製導覽">
 				</picture>
+			</div>
+			<div class="lp-section lp-bg-yellow">
 				<picture>
 					<source srcset="resource/img/customize/customize_content_2.webp" type="image/webp">
 					<img class="customize-content-img" src="resource/img/customize/customize_content_2.png" alt="首先感謝您選擇三三吾鄉社會企業">
 				</picture>
+			</div>
+			<div class="lp-section">
 				<picture>
 					<source srcset="resource/img/customize/customize_content_3.webp" type="image/webp">
 					<img class="customize-content-img" src="resource/img/customize/customize_content_3.png" alt="首先決定規格">
@@ -28,6 +32,8 @@
 					<source srcset="resource/img/customize/customize_content_7.webp" type="image/webp">
 					<img class="customize-content-img" src="resource/img/customize/customize_content_7.png" alt="最後確認有沒有特殊需求">
 				</picture>
+			</div>
+			<div class="lp-section lp-bg-yellow">
 				<picture>
 					<source srcset="resource/img/customize/customize_content_8.webp" type="image/webp">
 					<img class="customize-content-img" src="resource/img/customize/customize_content_8.png" alt="注意事項">
