--- a/resource/css/trisoap.scss
+++ b/resource/css/trisoap.scss
@@ -94,7 +94,7 @@ header {
 
 /* 1.2. Jumbotron - Img */
 
-$jumbotron-list: "about", "contact", "faq", "gift_box", "media", "moonfest", "newyear", "partner", "products", "shopping_guide", "single_product", "soap", "soapstring", "trial";
+$jumbotron-list: "about", "contact", "faq", "gift_box", "media", "moonfest", "newyear", "products", "shopping_guide", "single_product", "soap", "soapstring", "trial";
 
 @each $item in $jumbotron-list {
 	#jumbotron-#{$item} {
@@ -1034,6 +1034,16 @@ ul.lp-text {
  * 5. 合作夥伴｜Partner
  * -------------------------------------------------------------------------
  */
+
+#partner-wrap {
+	width: 100%;
+	margin-top: $main-nav-height;	// this page has no header
+}
+
+.partner-content-img {
+	display: block;
+	@extend .full-width-img;
+}
 
 #partner-accordion {
 	margin: 60px 8%;
