--- a/view/nav.html
+++ b/view/nav.html
@@ -47,7 +47,7 @@
 								<ul class="nav-dropdown-submenu">
 									<li class="nav-dropdown-item">
 										<a class="nav-main-link" href="index.php?route=partner">
-											合作夥伴
+											公益合作夥伴
 										</a>
 									</li>
 									<li class="nav-dropdown-item">
