add instagram link

--- a/view/footer.html
+++ b/view/footer.html
@@ -70,6 +70,10 @@
 				</p>
 			</div>
 			<div id="community">
+				<a class="footer-main-link" href="https://www.instagram.com/trisoap33/">
+					<i class="fa-brands fa-instagram"></i>
+					<span class="visuallyhidden">Instagram</span>
+				</a>
 				<a class="footer-main-link" href="https://www.facebook.com/trisoap">
 					<span class="icon-facebook"></span>
 					<span class="visuallyhidden">Facebook Fanpage</span>
