--- a/view/footer.html
+++ b/view/footer.html
@@ -71,7 +71,7 @@
 			</div>
 			<div id="community">
 				<a class="footer-main-link" href="https://www.instagram.com/trisoap33/">
-					<i class="fa-brands fa-instagram"></i>
+					<span class="icon-instagram"></span>
 					<span class="visuallyhidden">Instagram</span>
 				</a>
 				<a class="footer-main-link" href="https://www.facebook.com/trisoap">
