--- a/view/nav.html
+++ b/view/nav.html
@@ -18,6 +18,11 @@
 							首頁
 						</a>
 					</li>
+					<li class="nav-main-item">
+						<a class="nav-main-link" href="index.php?route=report">
+							四年有成
+						</a>
+					</li>
 					<li class="nav-main-item has-dropdown">
 						<a class="nav-main-link" href="javascript:void(0)">
 							關於三三
@@ -34,13 +39,13 @@
 									顧客問答
 								</a>
 							</li> -->
-							<li class="nav-dropdown-item">
+							<!-- <li class="nav-dropdown-item">
 								<a class="nav-main-link" href="index.php?route=shopping_guide">
 									購物須知
 								</a>
-							</li>
+							</li> -->
 							<li class="nav-dropdown-item has-dropdown">
-								<a class="nav-main-link" href="javascript:void(0)">
+								<!-- <a class="nav-main-link" href="javascript:void(0)">
 									異業合作
 									<span class="icon-angle-right"></span>
 								</a>
@@ -55,7 +60,13 @@
 											媒體報導
 										</a>
 									</li>
-								</ul>
+								</ul> -->
+								<a class="nav-main-link" href="index.php?route=partner">
+									公益合作夥伴
+								</a>
+								<a class="nav-main-link" href="index.php?route=media">
+									媒體報導
+								</a>
 							</li>
 							<li class="nav-dropdown-item">
 								<a class="nav-main-link" href="index.php?route=contact">
@@ -87,7 +98,7 @@
 							婚禮小物
 						</a>
 					</li>
-					{login_status}
+					<!-- {login_status} -->
 				</ul>
 			</div>
 		</nav>
