update the footer and contact info

--- a/view/footer.html
+++ b/view/footer.html
@@ -37,37 +37,46 @@
 				<a class="footer-main-link" href="index.php?route=soapstring">
 					旅用皂絲
 				</a>
-				<a class="footer-main-link" href="index.php?route=shopping_guide">
-					購物須知
-				</a>
 			</div>
 			<div id="company-info" class="footer-menu">
 				<p class="footer-title">
 					聯絡我們
 				</p>
 				<p>
+					聯絡電話：<a class="footer-main-link" href="tel:0905914689">0905914689</a><br/>
+					聯絡信箱 : <a class="footer-main-link" href="mailto:service@trisoap.com.tw">service@trisoap.com.tw</a><br/>
+					公司名稱：建皂希望有限公司<br/>
+					統一編號：43864595<br/>
+					台北辦公室：10367台北市大同區承德路三段191巷1號<br/>
+					台中辦公室：404台中市北區武昌路23號<br/>
+					公司登記地址：950臺東縣臺東市豐盛里22鄰梧州街120巷3號<br/>
+					財稅營業項目<br/>
+					其他化粧品批發(457299)<br/>
+					其他化粧品零售(475299)
+				</p>
+				<!-- <p>
 					<span class="icon-phone"></span>
 					<span class="visuallyhidden">Phone</span>
-					<!-- <a class="footer-main-link" href="tel:{company_phone}">
+					<a class="footer-main-link" href="tel:{company_phone}">
 						{company_phone}
-					</a> -->
+					</a>
 					<a class="footer-main-link" href="tel:0965445755">
 						0965445755
 					</a>
-				</p>
-				<p>
+				</p> -->
+				<!-- <p>
 					<span class="icon-envelope"></span>
 					<span class="visuallyhidden">Email</span>
 					<a class="footer-main-link" href="mailto:{company_email}">
 						{company_email}
 					</a>
-				</p>
-				<p>
+				</p> -->
+				<!-- <p>
 					<span class="icon-map-marker"></span>
 					<span class="visuallyhidden">Address</span>
-					<!-- {company_address} -->
+					{company_address}
 					台東市豐谷里32鄰梧州街120巷3號3樓
-				</p>
+				</p> -->
 			</div>
 			<div id="community">
 				<a class="footer-main-link" href="https://www.instagram.com/trisoap33/">
