--- a/view/content/contact.html
+++ b/view/content/contact.html
@@ -20,22 +20,31 @@
 					<!-- <input class="submit-btn" type="submit" value="確認送出"> -->
 					<hr class="text-sep-sm">
 					<div id="contact-info">
-						<p>
+						<!-- <p>
 							<span class="icon-phone"></span>
 							<span class="visuallyhidden">Phone</span>
-							<!-- {company_phone} -->
+							{company_phone}
 							0965445755
-						</p>
-						<p>
+						</p> -->
+						<!-- <p>
 							<span class="icon-envelope"></span>
 							<span class="visuallyhidden">Email</span>
 							{company_email}
-						</p>
-						<p>
+						</p> -->
+						<!-- <p>
 							<span class="icon-map-marker"></span>
 							<span class="visuallyhidden">Address</span>
-							<!-- {company_address} -->
+							{company_address}
 							台東市豐谷里32鄰梧州街120巷3號3樓
+						</p> -->
+						<p>
+							聯絡電話：<a class="footer-main-link" href="tel:0905914689">0905914689</a><br/>
+							聯絡信箱 : <a class="footer-main-link" href="mailto:service@trisoap.com.tw">service@trisoap.com.tw</a><br/>
+							公司名稱：建皂希望有限公司<br/>
+							統一編號：43864595<br/>
+							台北辦公室：10367台北市大同區承德路三段191巷1號<br/>
+							台中辦公室：404台中市北區武昌路23號<br/>
+							公司登記地址：950臺東縣臺東市豐盛里22鄰梧州街120巷3號
 						</p>
 					</div>
 				</div>
