update footer and contact info copy

--- a/view/content/contact.html
+++ b/view/content/contact.html
@@ -38,8 +38,8 @@
 							台東市豐谷里32鄰梧州街120巷3號3樓
 						</p> -->
 						<p>
-							聯絡電話：<a class="footer-main-link" href="tel:0905914689">0905914689</a><br/>
-							聯絡信箱 : <a class="footer-main-link" href="mailto:service@trisoap.com.tw">service@trisoap.com.tw</a><br/>
+							聯絡電話：<a href="tel:0905914689" target="_blank">0905914689</a><br/>
+							聯絡信箱：<a href="mailto:service@trisoap.com.tw" target="_blank">service@trisoap.com.tw</a><br/>
 							公司名稱：建皂希望有限公司<br/>
 							統一編號：43864595<br/>
 							台北辦公室：10367台北市大同區承德路三段191巷1號<br/>
