update index flexslider

--- a/view/component/jumbotron/index_flexslider.html
+++ b/view/component/jumbotron/index_flexslider.html
@@ -1,7 +1,7 @@
 		<header id="index-header">
 			<div class="flexslider">
 				<ul class="slides">
-					<li>
+					<!-- <li>
 						<div>
 							<a href="index.php?route=wedding">
 								<picture>
@@ -10,13 +10,53 @@
 								</picture>
 							</a>
 						</div>
-					</li>
-					<li>
+					</li> -->
+					<!-- <li>
 						<div>
 							<a href="index.php?route=about">
 								<picture>
 									<source srcset="resource/img/index/index_about.webp" type="image/webp">
 									<img src="resource/img/index/index_about.jpg" alt="三三吾鄉 Trisoap">
+								</picture>
+							</a>
+						</div>
+					</li> -->
+					<li>
+						<div>
+							<a href="index.php?route=report">
+								<picture>
+									<source srcset="resource/img/index/banner/banner-1.webp" type="image/webp">
+									<img src="resource/img/index/banner/banner-1.png" alt="三三吾鄉四年有成報告書">
+								</picture>
+							</a>
+						</div>
+					</li>
+					<li>
+						<div>
+							<a href="http://www.instagram.com/trisoap33" target="_blank">
+								<picture>
+									<source srcset="resource/img/index/banner/banner-2.webp" type="image/webp">
+									<img src="resource/img/index/banner/banner-2.png" alt="歡慶IG官方帳號上線">
+								</picture>
+							</a>
+						</div>
+					</li>
+					<li>
+						<div>
+							<a href="https://www.motpenews.com/zh_TW/news-details/id/214" target="_blank">
+								<picture>
+									<source srcset="resource/img/index/banner/banner-3.webp" type="image/webp">
+									<img src="resource/img/index/banner/banner-3.png" alt="榮獲連續三年文華東方酒店婚禮小物指定合作品牌">
+								</picture>
+							</a>
+						</div>
+					</li>
+					<li>
+						<div>
+							<a href="index.php?route=wedding">
+								<picture>
+									<source srcset="resource/img/index/banner/banner-4.webp" type="image/webp">
+									<img src="resource/img/index/banner/banner-4.png" alt="婚禮小物">
 								</picture>
 							</a>
 						</div>
