update media page

--- a/view/content/media.html
+++ b/view/content/media.html
@@ -1,8 +1,8 @@
 		<main>
-			<div class="main-wrap">
-				<h2 class="main-content-title">國內外媒體報導</h2>
+			<!-- <div class="main-wrap"> -->
+				<!-- <h2 class="main-content-title">國內外媒體報導</h2> -->
 				<div id="media-wrap">
-					<a class="media-link" target="_blank" rel="noopener" href="https://castnet.nctu.edu.tw/castnet/article/9986?issueID=630">
+					<!-- <a class="media-link" target="_blank" rel="noopener" href="https://castnet.nctu.edu.tw/castnet/article/9986?issueID=630">
 						<picture>
 							<source srcset="resource/img/media/castnet.webp" type="image/webp">
 							<img src="resource/img/media/castnet.png" alt="喀報">
@@ -31,7 +31,27 @@
 							<source srcset="resource/img/media/vita.webp" type="image/webp">
 							<img src="resource/img/media/vita.png" alt="生命力新聞">
 						</picture>
-					</a>
+					</a> -->
+					<picture>
+						<source srcset="resource/img/media/media-1.webp" type="image/webp">
+						<img class="partner-content-img" src="resource/img/media/media-1.png" alt="媒體報導">
+					</picture>
+					<div class="media-video-wrap">
+						<div class="media-video">
+							<div class="media-video-iframe">
+								<iframe src="https://www.youtube-nocookie.com/embed/zgHNlR8ghoA?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+							</div>
+						</div>
+						<div class="media-video">
+							<div class="media-video-iframe">
+								<iframe src="https://www.youtube-nocookie.com/embed/CLb4rM5KBM8?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+							</div>
+						</div>
+					</div>
+					<picture>
+						<source srcset="resource/img/media/media-2.webp" type="image/webp">
+						<img class="partner-content-img" src="resource/img/media/media-2.png" alt="媒體報導">
+					</picture>
 				</div>
-			</div>
+			<!-- </div> -->
 		</main>
