--- a/resource/css/trisoap.scss
+++ b/resource/css/trisoap.scss
@@ -94,7 +94,7 @@ header {
 
 /* 1.2. Jumbotron - Img */
 
-$jumbotron-list: "about", "contact", "faq", "gift_box", "media", "moonfest", "newyear", "products", "shopping_guide", "single_product", "soap", "soapstring", "trial";
+$jumbotron-list: "about", "contact", "faq", "gift_box", "moonfest", "newyear", "products", "shopping_guide", "single_product", "soap", "soapstring", "trial";
 
 @each $item in $jumbotron-list {
 	#jumbotron-#{$item} {
@@ -991,6 +991,34 @@ ul.lp-text {
  * 2. 媒體報導｜Media
  * -------------------------------------------------------------------------
  */
+
+ .media-video-wrap {
+	margin: 60px 8%;
+ }
+
+ .media-video-iframe {
+	position: relative;
+	height: 0;
+	padding-bottom: 100% * 9 / 16;
+
+	iframe {
+		position: absolute;
+		width: 100%;
+		height: 100%;
+		left: 0;
+		right: 0;
+		bottom: 0;
+	}
+}
+
+// Laptop
+@media screen and (min-width: $media-breakpoint-mobile + 1px) {
+	.media-video {
+		display: inline-block;
+		width: 48%;
+		margin: 0 1%;
+	}
+}
 
 .media-link {
 	text-decoration: none;
