hide media page header

--- a/resource/css/trisoap.scss
+++ b/resource/css/trisoap.scss
@@ -991,6 +991,9 @@ ul.lp-text {
  * 2. 媒體報導｜Media
  * -------------------------------------------------------------------------
  */
+ #jumbotron-media {
+	display: none;
+ }
 
  .media-video-wrap {
 	display: flex;
