add pinkoi page link

--- a/view/component/products/product.html
+++ b/view/component/products/product.html
@@ -7,7 +7,8 @@
 								</picture>
 							</a>
 							<div class="product-add-to-cart">
-								<a href="javascript:void(0)" onclick="orderitemCreate('{item_no}')">
+								<a href="{pinkoi-page}" target="_blank">
+								<!-- <a href="javascript:void(0)" onclick="orderitemCreate('{item_no}')"> -->
 									<!-- cart by praveen patchu from the Noun Project -->
 									<picture>
 										<source srcset="resource/img/product/add_to_cart.svg" type="image/svg+xml">
