update pinkoi page url

--- a/view/component/products/product.html
+++ b/view/component/products/product.html
@@ -7,7 +7,7 @@
 								</picture>
 							</a>
 							<div class="product-add-to-cart">
-								<a href="https://www.pinkoi.com/product/{pinkoi-page}" target="_blank">
+								<a href="https://www.pinkoi.com/store/trisoap" target="_blank">
 								<!-- <a href="javascript:void(0)" onclick="orderitemCreate('{item_no}')"> -->
 									<!-- cart by praveen patchu from the Noun Project -->
 									<picture>
