--- a/view/content/single_product.html
+++ b/view/content/single_product.html
@@ -17,7 +17,8 @@
 							數量：
 						</label>
 						<input type="number" id="purchase-amount" class="form-field" name="ORDAMT" value="1" min="1">
-						<a class="add-to-cart-link" href="javascript:void(0)" onclick="orderitemCreate('{item_no}')">
+						<a class="add-to-cart-link" href="https://www.pinkoi.com/store/trisoap">
+						<!-- <a class="add-to-cart-link" href="javascript:void(0)" onclick="orderitemCreate('{item_no}')"> -->
 							<!-- cart by praveen patchu from the Noun Project -->
 							<picture>
 								<source srcset="resource/img/product/add_to_cart.svg" type="image/svg+xml">
