update wedding page style

--- a/view/content/wedding.html
+++ b/view/content/wedding.html
@@ -74,7 +74,8 @@
 						</li>
 						<li>
 							<p class="wd-text">
-								製作完成後於指定日期寄送到府
+								製作完成後<br>
+								於指定日期寄送到府
 							</p>
 						</li>
 					</ol>
