--- a/view/content/business.html
+++ b/view/content/business.html
@@ -1,5 +1,40 @@
 		<main>
 			<div id="business-wrap">
-				<h2>Business</h2>
+				<picture>
+					<source srcset="resource/img/business/business-1.webp" type="image/webp">
+					<img class="business-content-img" src="resource/img/business/business-1.png" alt="企業合作">
+				</picture>
+				<a class="business-link" target="_blank" rel="noopener" href="https://forms.gle/gXrpwHgEB4wCvKkJ7">
+					<picture>
+						<source srcset="resource/img/business/business-2.webp" type="image/webp">
+						<img class="business-content-img" src="resource/img/business/business-2.png" alt="感謝你們支持三三吾鄉皂">
+					</picture>
+				</a>
+				<picture>
+					<source srcset="resource/img/business/business-3.webp" type="image/webp">
+					<img class="business-content-img" src="resource/img/business/business-3.png" alt="合作案例">
+				</picture>
+				<picture>
+					<source srcset="resource/img/business/business-4.webp" type="image/webp">
+					<img class="business-content-img" src="resource/img/business/business-4.png" alt="我們暸解你的需求">
+				</picture>
+				<picture>
+					<source srcset="resource/img/business/business-5.webp" type="image/webp">
+					<img class="business-content-img" src="resource/img/business/business-5.png" alt="品牌演講推廣合作">
+				</picture>
+				<picture>
+					<source srcset="resource/img/business/business-6.webp" type="image/webp">
+					<img class="business-content-img" src="resource/img/business/business-6.png" alt="企業CSR，大學USR">
+				</picture>
+				<a class="business-link" target="_blank" rel="noopener" href="https://forms.gle/gXrpwHgEB4wCvKkJ7">
+					<picture>
+						<source srcset="resource/img/business/business-7.webp" type="image/webp">
+						<img class="business-content-img" src="resource/img/business/business-7.png" alt="立即填寫表單">
+					</picture>
+				</a>
+				<picture>
+					<source srcset="resource/img/business/business-8.webp" type="image/webp">
+					<img class="business-content-img" src="resource/img/business/business-8.png" alt="感謝歷年來支持的以下合作企業夥伴">
+				</picture>
 			</div>
 		</main>
