--- a/view/nav.html
+++ b/view/nav.html
@@ -94,6 +94,11 @@
 						</ul>
 					</li>
 					<li class="nav-main-item">
+						<a class="nav-main-link" href="index.php?route=business">
+							企業採購專區
+						</a>
+					</li>
+					<li class="nav-main-item">
 						<a class="nav-main-link new-nav" href="index.php?route=wedding">
 							婚禮小物
 						</a>
