update about page

--- a/view/content/about.html
+++ b/view/content/about.html
@@ -42,8 +42,8 @@
 			<div class="lp-section lp-plain-text" id="about-member-master">
 				<div class="about-member-img-wrap">
 					<picture>
-						<source srcset="resource/img/about/pusher2.webp" type="image/webp">
-						<img class="about-member-img" src="resource/img/about/pusher2.png" alt="三三吾鄉創辦人 尹又令">
+						<source srcset="resource/img/about/pusher3.webp" type="image/webp">
+						<img class="about-member-img" src="resource/img/about/pusher3.jpg" alt="三三吾鄉創辦人 尹又令">
 					</picture>
 				</div>
 				<div class="about-member-intro">
@@ -52,7 +52,8 @@
 						創辦人 尹又令
 					</p>
 					<p class="lp-text lp-content-left">
-						當初要成立三三的時候我一直不斷地聽到老師和朋友告訴我：「你選擇了一條很辛苦的路！」一路走來如果說不辛苦是騙人的，但每次在接觸到一個新的合作案，或是培訓新的一批教保人員和身障學員的時候，他們總是會開心地笑著，然後對我說：「哥哥你下次還要再來哦！」不管聽了多少次，我都會再燃起一股能繼續走的動力。
+						從零基礎的手工皂培訓走到現今可以精準製作手工皂的學員們，多年來，三三吾鄉深刻體會到學員們的潛力以及進步時候所帶來的成長與感動。<br>
+						您的婚禮可以傳遞公益的幸福不僅僅只是口號，而是每一份婚禮小物背後都能帶給學員們成長的動力和學習的機會。
 					</p>
 				</div>
 			</div>
