update partner content

--- a/view/content/partner.html
+++ b/view/content/partner.html
@@ -2,7 +2,7 @@
 			<div id="partner-wrap">
 				<picture>
 					<source srcset="resource/img/partner/partner_content_1.webp" type="image/webp">
-					<img class="partner-content-img" src="resource/img/partner/partner_content_1.png" alt="合作社福團體">
+					<img class="partner-content-img" src="resource/img/partner/partner_content_1.png" alt="公益合作社福夥伴">
 				</picture>
 				<picture>
 					<source srcset="resource/img/partner/partner_content_2.webp" type="image/webp">
@@ -18,11 +18,15 @@
 				</picture>
 				<picture>
 					<source srcset="resource/img/partner/partner_content_5.webp" type="image/webp">
-					<img class="partner-content-img" src="resource/img/partner/partner_content_5.png" alt="宜蘭自閉症協會小作所">
+					<img class="partner-content-img" src="resource/img/partner/partner_content_5.png" alt="信望愛智能發展中心">
 				</picture>
 				<picture>
 					<source srcset="resource/img/partner/partner_content_6.webp" type="image/webp">
-					<img class="partner-content-img" src="resource/img/partner/partner_content_6.png" alt="台中信望愛智能發展中心">
+					<img class="partner-content-img" src="resource/img/partner/partner_content_6.png" alt="蒙恩聽障烘焙坊">
+				</picture>
+				<picture>
+					<source srcset="resource/img/partner/partner_content_7.webp" type="image/webp">
+					<img class="partner-content-img" src="resource/img/partner/partner_content_7.png" alt="微笑天使烘焙坊">
 				</picture>
 			</div>
 		</main>
