update wedding content

--- a/view/content/wedding.html
+++ b/view/content/wedding.html
@@ -301,7 +301,7 @@
 					也能帶給憨兒們幸福！
 				</p>
 			</div>
-			<div id="wd-special-offers">
+			<!-- <div id="wd-special-offers">
 				<div class="wd-offer">
 					<div class="wd-offer-name">
 						<p class="wd-title">
@@ -413,6 +413,20 @@
 						</p>
 					</div>
 				</div>
+			</div> -->
+			<div id="wd-special-package">
+				<picture>
+					<source srcset="resource/img/wedding/wedding-1.webp" type="image/webp">
+					<img class="wd-content-img" src="resource/img/wedding/wedding-1.png" alt="熱銷方案">
+				</picture>
+				<picture>
+					<source srcset="resource/img/wedding/wedding-2.webp" type="image/webp">
+					<img class="wd-content-img" src="resource/img/wedding/wedding-2.png" alt="蒙恩聽障烘焙坊">
+				</picture>
+				<picture>
+					<source srcset="resource/img/wedding/wedding-3.webp" type="image/webp">
+					<img class="wd-content-img" src="resource/img/wedding/wedding-3.png" alt="微笑天使牛札餅">
+				</picture>
 			</div>
 			<div id="wd-cta">
 				<div class="wd-intro-content">
