--- a/resource/css/trisoap.scss
+++ b/resource/css/trisoap.scss
@@ -2696,6 +2696,15 @@ $wedding-action-gray: #f2f2f2;
 	color: $wedding-text-gray;
 }
 
+#wd-special-package {
+	width: 100%;
+}
+
+.wd-content-img {
+	display: block;
+	@extend .full-width-img;
+}
+
 /* -------------------------------------------------------------------------
  * 12. 四年有成｜Report
  * -------------------------------------------------------------------------
@@ -2715,7 +2724,7 @@ $wedding-action-gray: #f2f2f2;
  * -------------------------------------------------------------------------
  */
 
- #business-wrap {
+#business-wrap {
 	width: 100%;
 }
 
