fix navbar hover issue

--- a/view/content/index.html
+++ b/view/content/index.html
@@ -172,7 +172,7 @@
 						天然植物油多種配方
 					</p>
 					<p class="lp-text">
-						採用誠香集認證天然植物油<br>
+						採用認證天然植物油<br>
 						精心調配多種配方<br>
 						乾性、中性、油性、敏感型肌膚<br>
 						對應多項肌膚設計不同配方皂絲款式<br>
