--- a/view/nav.html
+++ b/view/nav.html
@@ -44,7 +44,7 @@
 									購物須知
 								</a>
 							</li> -->
-							<li class="nav-dropdown-item has-dropdown">
+							<li class="nav-dropdown-item">
 								<!-- <a class="nav-main-link" href="javascript:void(0)">
 									異業合作
 									<span class="icon-angle-right"></span>
@@ -64,6 +64,8 @@
 								<a class="nav-main-link" href="index.php?route=partner">
 									公益合作夥伴
 								</a>
+							</li>
+							<li class="nav-dropdown-item">
 								<a class="nav-main-link" href="index.php?route=media">
 									媒體報導
 								</a>
