update index copy

--- a/view/content/index.html
+++ b/view/content/index.html
@@ -137,7 +137,7 @@
 							天然植物油
 						</p>
 						<p class="lp-text">
-							採用誠香集認證<br>
+							採用認證<br>
 							食品級植物油
 						</p>
 					</div>
